# PixCrawler

./: .deployignore  .deployment  .editorconfig  .env.azure  .env.example  .env.example.azure  .env.test.example  .gitignore  .pre-commit-config.yaml  AZURE_DEPLOYMENT.md  AZURE_DEPLOYMENT_GUIDE.md  AZURE_FOR_BEGINNERS.md  AZURE_PORTAL_DEPLOYMENT.md  CHUNKING_QUICK_REFERENCE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  QUICK_START_AZURE.md  README.md  README_API.md  README_celery.md  SCHEMA_ALIGNMENT_CHECKLIST.md  TEMP_STORAGE_CLEANUP_INTEGRATION.md  TESTING_CHECKLIST.md  TEST_RESULTS.md  _downloader.py  _engine.py  _engine_optimized.py  _exceptions.py  _generator.py  _helpers.py  alembic.ini  api_main.py  azure-config.json  azure-deploy.yml  bearer_token.txt  colab_run.py  (+40 more)
backend/: .env.example  .env.production.example  Dockerfile  JOB_CHUNKING_SERVICE.md  README.md  TEMP_STORAGE_CLEANUP_README.md  __init__.py  app.py  dependencies.py  docker-compose.yml  env.example  main.py  pyproject.toml  simple_flow.py  tasks.py
backend/api/: __init__.py  auth.py  dependencies.py  images.py  response_helpers.py  types.py  users.py
backend/core/: __init__.py  async_helpers.py  azure_integration.py  config.py  exceptions.py  logging.py  metrics_middleware.py  middleware.py  rate_limiter.py  supabase.py
backend/database/: __init__.py  connection.py  models.py
backend/docs/: CELERY_INTEGRATION_API.md  DATASET_PROCESSING_PIPELINE.md  JOB_ORCHESTRATOR.md  METRICS_IMPLEMENTATION.md  ORCHESTRATOR_QUICK_REFERENCE.md  README.md
backend/examples/: test_login.py  test_user_creation.py
backend/models/: __init__.py  api_keys.py  base.py  batch.py  chunks.py  credits.py  dashboard.py  dataset.py  dataset_version.py  flow.py  jobs.py  metrics.py  notifications.py  policy.py  usage.py  user.py  workflow.py
backend/postman/: FRONTEND_INTEGRATION_TESTING.md  FRONTEND_INTEGRATION_TEST_REPORT.md  INTEGRATION_TEST_CHECKLIST.md  POSTMAN_COLLECTION_TEST_REPORT.md  PRISM_TESTING_GUIDE.md  PixCrawler.Exports.post-man_collection.json  PixCrawler_Frontend_Mock.json  QUICK_START_FRONTEND_TESTING.md  QUICK_TEST_GUIDE.md  README.md  README_POSTMAN.md  SPEC_COMPLETION_SUMMARY.md  TASK_11_COMPLETION.md  TASK_12_COMPLETION.md  TASK_14_COMPLETION_SUMMARY.md  TASK_16_COMPLETION_SUMMARY.md  TASK_17_FINAL_VALIDATION.md  TASK_17_FINAL_VALIDATION_SUMMARY.md  TASK_9_STATUS.md  TESTING_CHECKLIST.md  VALIDATION_REPORT.md  openapi.json  setup-frontend-testing.cmd  setup-frontend-testing.sh  validate_collection.py  validate_openapi.py  validate_task12.py
backend/repositories/: __init__.py  activity_log_repository.py  base.py  crawl_job_repository.py  dataset_repository.py  flow_repository.py  image_repository.py  job_chunk_repository.py  metrics_repository.py  notification_repository.py  policy_repository.py  project_repository.py  user_repository.py  workflow_repository.py
backend/schemas/: __init__.py  activity.py  api_keys.py  base.py  crawl_jobs.py  credits.py  dataset.py  dataset_version.py  flow.py  job_chunks.py  jobs.py  metrics.py  notifications.py  policy.py  profile.py  project.py  projects.py  storage.py  usage.py  user.py  validation.py  workflow.py
backend/scripts/: check_config.py  debug_registration.py  promote_ganna.py  promote_to_admin.py  quick_test.py  setup_admin.py  test_database_connection.py
backend/services/: __init__.py  activity.py  api_keys.py  auth.py  base.py  crawl_job.py  credits.py  dashboard.py  dataset.py  dataset_processing_pipeline.py  flow.py  job_chunking.py  job_orchestrator.py  metrics.py  notification.py  policy.py  project.py  resource_monitor.py  storage.py  supabase_auth.py  temp_storage_cleanup.py  user.py  validation.py
backend/static/: redoc.html  swagger-ui-custom.css  swagger-ui.html
backend/storage/: .env.example  ARCHIVE_TIER_README.md  README.md  __init__.py  azure_blob.py  azure_blob_archive.py  base.py  config.py  datalake_blob_provider.py  example_usage.py  factory.py  local.py  management.py  requirements.txt  storage_settings.py
backend/storage_abstraction/: .env.example  .gitignore  README.md  requirements.txt
backend/tasks/: __init__.py  crawl_job.py  policy.py  temp_storage_cleanup.py
backend/tests/: QUICKSTART_STORAGE_TESTS.md  README_STORAGE_TESTS.md  STORAGE_TEST_SUMMARY.md  __init__.py  conftest.py  conftest_integration.py  run_storage_tests.py  test_api_endpoints.py  test_architecture.py  test_crawl_job_cancellation.py  test_health.py  test_integration_workflows.py  test_job_chunking_service.py  test_metrics.py  test_metrics_integration.py  test_storage_integration.py  test_storage_unit.py  test_supabase_connection.py  test_tasks.py  test_temp_storage_cleanup.py  test_typing_fixes.py
backend/utils/: __init__.py  async_helpers.py  metrics_collector.py  queue_metrics.py
backend/validation/: __init__.py  base.py  factory.py  fast.py  medium.py  slow.py
backend/validation_service/: README.md  app.py
builder/: .env.example  CHANGELOG.md  README.md  __init__.py  _ai_keyword_integration.py  _base.py  _builder.py  _config.py  _constants.py  _downloader.py  _engine.py  _exceptions.py  _generator.py  _helpers.py  _jupyter_support.py  _keywords.py  _predefined_variations.py  _search_engines.py  _utilities.py  cli.py  colab_run.py  config.json  config.py  constants.py  downloader.py  generator.py  helpers.py  progress.py  protocols.py  pyproject.toml  requirements.txt  tasks.py  utilities.py
builder/builder/: __init__.py  generators.py  protocols.py
builder/example/: colab_run.py  (+2 more)
celery_core/: .env.example  README.md  __init__.py  app.py  base.py  config.py  manager.py  pyproject.toml  tasks.py  workflows.py
logging_config/: README.md  __init__.py  config.py  example.py  pyproject.toml
sdk/: CHANGELOG.md  README.md  demo.py  pyproject.toml
utility/: .env.example  README.md  __init__.py  config.py  pyproject.toml  pytest.ini  report_generator.py
validator/: .env.example  README.md  __init__.py  config.py  integrity.py  level.py  pyproject.toml  tasks.py  validation.py
(+653 files in other folders)
