[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixcrawler"
version = "0.1.9"
description = "Configurable Image Dataset Builder for ML/AI projects"
readme = "README.md"
authors = [
    {name = "Alaamer", email = "ahmedmuhmmed239@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["dataset", "crawler", "image", "machine learning", "AI"]
dependencies = [
    "g4f>=0.0.1",
    "jsonschema>=4.0.0",
    "requests>=2.25.0",
    "duckduckgo-search>=2.8.0",
    "icrawler>=0.6.6",
    "tqdm>=4.62.0",
    "Pillow>=9.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.9.0",
]
yaml = ["PyYAML>=6.0"]

[project.urls]
"Homepage" = "https://github.com/alaamer12/pixcrawler"
"Bug Tracker" = "https://github.com/alaamer12/pixcrawler/issues"
"Documentation" = "https://github.com/alaamer12/pixcrawler#readme"

[project.scripts]
crawle = "main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=pixcrawler --cov-report=term-missing"
testpaths = ["tests"] 