[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixcrawler-backend"
version = "0.1.0"
description = "Backend API service for PixCrawler image dataset platform"
authors = [{name = "PixCrawler Team", email = "team@pixcrawler.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pixcrawler-logging",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
pixcrawler-api = "backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "W", "F", "I", "N", "B", "UP", "C4", "SIM", "TCH"]
ignore = ["E501", "B008"]

[tool.ruff.isort]
known-first-party = ["backend", "pixcrawler-logging"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = "true$'"

[tool.isort]
profile = "black"
line_length = 88
