[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixcrawler-backend"
version = "0.1.0"
description = "Backend API service for PixCrawler image dataset platform"
authors = [{ name = "PixCrawler Team", email = "team@pixcrawler.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic[email]>=2.5.0",
  "pydantic-settings>=2.1.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "redis>=5.0.0",
  "celery>=5.3.0",
  "python-multipart>=0.0.6",
  "supabase>=2.0.0",
  "pixcrawler-utility",
  "fastapi-pagination", # Use Latest
  "fastapi-limiter", # Use Latest
  "asyncpg",
  "platformdirs",
  "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.12.0",
  "httpx>=0.25.0",
  "ruff>=0.1.0",
  "mypy>=1.7.0",
  "pre-commit>=3.5.0",
]

[project.scripts]
pixcrawler-api = "backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "W", "F", "I", "N", "B", "UP", "C4", "SIM", "TCH"]
ignore = ["E501", "B008"]

[tool.ruff.isort]
known-first-party = ["backend", "pixcrawler-utility"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = "true$'"

[tool.isort]
profile = "black"
line_length = 88
