[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "builder"
version = "0.1.1"
description = "Configurable Image Dataset Builder - A customizable image dataset builder that crawls the web using popular search engines"
authors = [{ name = "Alaamer", email = "amrmuhmed86@gmail.com" }]
readme = "README.md"
license = "MIT"
keywords = ["image", "dataset", "crawler", "machine-learning", "web-scraping", "ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
  "requests",
  "pillow",
  "ddgs",
  "jsonschema",
  "icrawler",
  "tqdm",
  "g4f",
  "pixcrawler-logging",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
