[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixcrawler-sdk"
version = "0.1.0"
description = "Official Python SDK for PixCrawler"
readme = "README.md"
authors = [{ name = "PixCrawler Team", email = "team@pixcrawler.com" }]
dependencies = [
    "pixcrawler-builder",
    "pixcrawler-validator",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "duckduckgo-search>=6.0.0",
]
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["pixcrawler"]
