[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixcrawler-utility"
version = "0.1.0"
description = "Centralized utility system for the PixCrawler monorepo"
readme = "README.md"
license = "MIT"
authors = [
    {name = "PixCrawler Team"}
]
maintainers = [
    {name = "PixCrawler Team"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "configuration"
]
requires-python = ">=3.8"
dependencies = [
    "loguru",
    "zstandard"
]

[project.urls]
Homepage = "https://github.com/pixcrawler/pixcrawler"
Repository = "https://github.com/pixcrawler/pixcrawler"
Documentation = "https://github.com/pixcrawler/pixcrawler/tree/main/utility_config"
Issues = "https://github.com/pixcrawler/pixcrawler/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "utility/",
    "README.md",
]
