[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixcrawler-validator"
version = "0.1.0"
description = "Image Dataset Validator - Validation and integrity checking for image datasets"
authors = [{ name = "PixCrawler Team", email = "team@pixcrawler.com" }]
readme = "README.md"
license = "MIT"
keywords = ["image", "dataset", "validation", "integrity", "duplicates", "machine-learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "pillow>=10.0.0",
  "imagehash>=4.3.0",
  "numpy>=1.24.0",
  "jsonschema>=4.0.0",
  "tqdm>=4.65.0",
  "pixcrawler-logging",
  "pixcrawler-celery-core",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "celery>=5.3.0",
  "kombu>=5.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]