[project]
name = "utility-compress"
version = "0.1.0"
description = "Utility package with image compression and archiving pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PixCrawler" }]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "Pillow>=10.0",
  "pillow-avif-plugin>=1.4.6",
  "tqdm>=4.66",
  "zstandard>=0.22.0",
  "python-dotenv>=1.0",
]

[project.scripts]
utility-compress = "utility.compress.pipeline:run"
